# claw-ql

./: .gitignore  Cargo.toml  README.md  extention.sr  features.md  rustfmt.toml  why.md
.cursor/: mcp.json
.cursor/rules/: general.md  rust_instruction.md
.cursor/skills/: writing_rust.md
claw-ql-macros/: Cargo.toml
claw-ql-macros/src/: _internal_mod.rs  async_is_send_mod.rs  collection_derive.rs  data_flow_mod.rs  dynamic_fn_mod.rs  fetch_many_mod.rs  flat_struct.rs  from_row_alias_derive.rs  lib.rs  on_migrate_derive.rs  pdev.rs  relation.rs  simple_enum_mod.rs  skip_mod.rs  sql_mod.rs  utils.rs
claw-ql-macros/src/tests/: expansion_test_collection_derive.rs  mod.rs
examples/: dynamic_client.rs  id_concept.rs  macro_expansion_collection_derive.rs  todo.rs  workflow.rs  workflow_op.rs
mcp/say-word/: server.py  word.txt
patches/: sqlx+0.8.6.patch  sqlx-core+0.8.6.patch  sqlx-sqlite+0.8.6.patch
src/: any_set.rs  build_tuple.rs  builder_pattern.rs  collections.rs  connect_in_memory.rs  database_extention.rs  dyn_vec.rs  dynamic_client.rs  execute.rs  expressions.rs  extend_any.rs  extend_sqlite.rs  extentions.rs  from_row.rs  gen_serde.rs  http.rs  ident.rs  identity_management.rs  into_infer_from_phantom.rs  inventory.rs  json_client.rs  json_client_channel.rs  json_client_v0.rs  json_client_v1.rs  json_value_cmp.rs  lib.rs  lifetime_guide.rs  migration.rs  on_migrate.rs  on_migrate2.rs  prelude.rs  quick_query.rs  row_utils.rs  schema.rs  select_one.rs  select_st.rs  singleton.rs  singlton_default.rs  statements.rs  test_module.rs  (+7 more)
src/builder_pattern/: json_client.rs  mod.rs  on_json_client.rs  on_migrate_builder.rs
src/expressions/: filters.rs
src/filters/: by_id_mod.rs  mod.rs
src/json_client/: add_collection.rs  as_router.rs  axum_router_mod.rs  builder_pattern.rs  client_interface.rs  delete_one.rs  dynamic_collection.rs  fetch_one.rs  from_inventory.rs  gen_serde_impls.rs  http_error.rs  http_errors.rs  insert_one.rs  json_collection.rs  mod.rs  op_add_collection.rs  op_add_link.rs  op_delete_one.rs  op_delete_one_trait_extension.rs  op_fetch_many.rs  op_fetch_many_trait_extension.rs  op_fetch_one.rs  op_fetch_one_trait_extension.rs  op_insert_many.rs  op_insert_one.rs  op_insert_one_trait_extension.rs  op_update_one.rs  op_update_one_trait_extension.rs  ops.rs  realtime.rs  select_items_trait_object.rs  select_one.rs  sqlx_executor.rs  string_client.rs  supported_filters.rs  test_utilities.rs  tests.rs  to_bind.rs  update_one.rs
src/json_client/other/: group_by.rs  relation.rs
src/json_client2/: mod.rs
src/json_client_v0_legacy/: add_collection.rs  delete_one.rs  fetch_one.rs  from_inventory.rs
src/links/: date_mod.rs  dynamic_link.rs  functional_impls.rs  group_by.rs  id.rs  liq_link.rs  mod.rs  relation.rs  relation_many_to_many.rs  relation_optional_to_many.rs  relation_optional_to_many_inverse.rs  set_id.rs  set_id_mod.rs  set_new.rs  set_new_mod.rs  timestamp.rs  update_links.rs
src/operations/: collections.rs  delete.rs  delete_by_id.rs  delete_one.rs  delete_one_op.rs  dynamic_client.rs  fetch_linked_records.rs  fetch_many.rs  fetch_one.rs  insert.rs  insert_one.rs  insert_one_links.rs  insert_one_op.rs  insert_one_refactor_link_trait.rs  insert_one_refactor_link_trait2.rs  junction.rs  mod.rs  select_one.rs  select_one_op.rs  update.rs  update_one.rs  update_one_op.rs  v0_fetch_one.rs  v0_update_one.rs  v1_insert_one.rs
src/operations_2/: fetch_one.rs  mod.rs
src/owned_query_builder/: expressions.rs  functional_expr.rs  mod.rs  sanitize.rs  statements.rs  syntax.rs
src/query_builder/: any.rs  defered_builder.rs  direct_builder.rs  functional_expr.rs  mod.rs  sanitize.rs  syntax.rs
src/sqlx_query_builder/: basic_expressions.rs  functional_expr.rs  mod.rs  std_impls.rs  trait_objects.rs
src/sqlx_query_builder/statements/: add_column_statement.rs  create_table_statement.rs  delete_st.rs  delete_statement.rs  insert_statement.rs  mod.rs  select_statement.rs  update_st.rs  update_statement.rs
src/statements/: create_table_st.rs  create_table_statement.rs  delete_st.rs  delete_statement.rs  insert_one_st.rs  insert_one_statement.rs  insert_statement.rs  mod.rs  select_st.rs  select_statement.rs  update_one_st.rs  update_statement.rs
src/utils/: count.rs  json_query.rs  json_utils.rs
tests/: axum_router.rs  build_tuple.rs  build_tuple_v2.rs  collection_macro_expansion.rs  concept_builder.rs  concept_const_impl.rs  concept_database_for_operation.rs  concept_dynamic_migrator.rs  concept_dynamic_statments.rs  concept_extend_trait_with_generic_methods.rs  concept_generic_statment.rs  concept_has_where.rs  concept_issue.rs  concept_lifetime_links.rs  concept_mutual_execlusive.rs  concept_new_formater.rs  concept_proxy.rs  concept_sql.rs  concept_tvec.rs  deep_dive_liftetime.rs  dynamic_client.rs  expressions_and_statments.rs  fetch_one.rs  from_row_alias.rs  json_client.rs  json_client_channel.rs  json_client_new_serde.rs  json_collection_is_collection.rs  macro_expansion.rs  macro_expansion_2.rs  many_to_many.rs  migrate.rs  migration.rs  migration_2.rs  op.rs  optional_to_many.rs  patching_sqlx.rs  ref_link.rs  refactor_link.rs  refactor_link_2.rs  (+18 more)
