[package]
name = "claw-ql"
version = "0.1.0"
edition = "2024"

[dependencies]
claw-ql-macros = { path = "./claw-ql-macros", version = "0.1.0" }
sqlx = { version = "0.8.5" }
paste = "1.0.15"
# feature trace
tracing = { version = "0.1.40", optional = true }
# feature serde
serde_json = { version = "1.0.117", optional = true }
serde = { version = "1.0.203", optional = true }
convert_case = "0.8.0"
tower-service = { version = "0.3.3", optional = true }
hyper = { version = "1.6.0", optional = true }
axum = { version = "0.8.4", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
pretty_assertions = "1"
sqlx = { version = "0.8.5", features = ["runtime-tokio"] }
axum = { version = "0.8.4" }
futures = "0.3.31"
tower-service = { version = "0.3.3" }
tower = { version = "0.5.2" }
hyper = { version = "1.6.0" }

[features]
default = ["sqlite", "trace", "http", "experimental_id_trait"]
waiting_min_specialization = []
experimental_id_trait = ["claw-ql-macros/experimental_id_trait"]
http = ["serde", "dep:tower-service", "dep:hyper", "dep:axum"]
serde = ["dep:serde_json", "dep:serde"]
trace = ["dep:tracing"]
sqlite = ["sqlx/sqlite"]

[[example]]
name= "id_concept"
required-features = ["experimental_id_trait"]
