[package]
name = "claw-ql"
version = "0.1.0"
edition = "2024"

[dependencies]
claw-ql-macros = { path = "./claw-ql-macros", version = "0.1.0" }
sqlx = { version = "0.8.5" }
paste = "1.0.15"
convert_case = "0.8.0"
# feature trace
tracing = { version = "0.1.40", optional = true }
# feature serde
serde = { version = "1.0.203", optional = true }
# feature http
serde_json = { version = "1.0.117", optional = true }
tower-service = { version = "0.3.3", optional = true }
hyper = { version = "1.6.0", optional = true }
axum = { version = "0.8.4",features = ["macros"], optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
# feature inventory
inventory = { version = "0.3.20", optional = true }
futures = "0.3.31"
left-right = "0.11.7"
oneshot = { version = "0.2.1", features = ["async"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
pretty_assertions = "1"
sqlx = { version = "0.8.5", features = ["runtime-tokio"] }
axum = { version = "0.8.4" }
tower-service = { version = "0.3.3" }
tower = { version = "0.5.2" }
hyper = { version = "1.6.0" }
inventory = { version = "0.3.20" }

[package.metadata.patch]
crates = ["sqlx", "sqlx-core", "sqlx-sqlite"]

[patch.crates-io]
sqlx = {path = './target/patch/sqlx-0.8.6'}
sqlx-core = {path = './target/patch/sqlx-core-0.8.6'}
sqlx-sqlite = {path = './target/patch/sqlx-sqlite-0.8.6'}

[features]
default = ["fix_executor", "sqlite", "trace", "http"]
# need to apply patches or for sqlx to change add/fix Executor trait
fix_executor = []
nightly_rust_specialization = []
nightly_rust_const_impl = []
inventory = ["dep:inventory", "claw-ql-macros/inventory"]
http = ["serde", "dep:tower-service", "dep:hyper", "dep:axum", "tokio/full"]
serde = ["dep:serde_json", "dep:serde", "claw-ql-macros/serde"]
trace = ["dep:tracing"]
sqlite = ["sqlx/sqlite"]
skip_without_comments = []
