[package]
name = "claw-ql-macros"
version = "0.1.0"
edition = "2024"

description = "Procedural macros for the claw-ql"
license = "MIT"

[lib]
proc-macro = true

[dev_dependencies]
pretty_assertions = "1"

[dependencies]
case = "1.0.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.33"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "visit", "visit-mut", "extra-traits"] }
